@@ -15,6 +15,7 @@ Bug fixes
  - [core] don't always fetch the sorting columns
  - [eas] strip '<>' from bodyId and when forwarding mails
  - [eas] fix search on for Outlook application (#4605 and #4607)
+ - [eas] improve search operations and results fetching
 
 4.0.4 (2018-10-23)
 ------------------
